backport some auxiliary libraries to support vmtest_jit and vmtest_gc