@@ -42,7 +42,7 @@ import gc.g1.unloading.configuration.TestConfiguration;
 import gc.g1.unloading.keepref.*;
 import nsk.share.test.ExecutionController;
 import sun.hotspot.WhiteBox;
-import jdk.internal.misc.Unsafe;
+import sun.misc.Unsafe;
 
 import java.lang.ref.*;
 import java.lang.reflect.Field;
@@ -323,7 +323,13 @@ public class ClassLoadingHelper {
     }
 
     private static Unsafe getUnsafe() {
-        return Unsafe.getUnsafe();
+        try {
+            Field f = Unsafe.class.getDeclaredField("theUnsafe");
+            f.setAccessible(true);
+            return (Unsafe)f.get(null);
+        } catch(Exception e) {
+            throw new RuntimeException("Unsafe", e);
+        }
     }
 
 }
